# attest

./: .gitignore  AUTHORS  ChangeLog  Doxyfile.in  HACKING  Makefile.am  README  README.md  TODO  attest.pc.in  configure.ac
include/: config.h.in
include/attest/: assert.h  attest.h  attest_runner.h  reporter.h  runner.h  standard_reporter.h
src/: attest.cpp  main.cpp  reporter.cpp  runner.cpp  standard_reporter.cpp
test/: real_test.cpp  test_assertions.cpp  test_auto_register.cpp  test_harness.h  test_register.cpp  test_reporter.cpp  test_run_tests.cpp  test_runner.cpp  test_standard_reporter.cpp
