AC_REVISION([0.2])
AC_INIT([attest], [0.2], [graham@grahamcox.co.uk])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 no-define foreign])

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([include/config.h])

AC_PROG_CXX
LT_INIT

EXPORT_FLAGS=""
EXPORT_LIBS=""

BOOST_REQUIRE
BOOST_PROGRAM_OPTIONS
EXPORT_LIBS="$EXPORT_LIBS $BOOST_PROGRAM_OPTIONS_LIBS"

AC_SUBST(EXPORT_FLAGS)
AC_SUBST(EXPORT_LIBS)

AC_CONFIG_FILES([Makefile Doxyfile attest.pc])
AC_OUTPUT
